Add shortcut icon

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="styles.css">
+        <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+        <link rel="shortcut icon" href="photo.png">
         <title>Jinwei Liu</title>
     </head>
     <body>
@@ -34,8 +36,8 @@
                 <div class="section-content">
                     <ul>
                         <li>[J1] Bentian Jiang, Jingsong Chen, Jinwei Liu, Lixin Liu, Fangzhou Wang, Xiaopeng Zhang, and Evangeline F.Y. Young. “CU.POKer: Placing DNNs on WSE with Optimal Kernel Sizing and Efficient Protocol Optimization.” accepted by IEEE Transactions on Computer-Aided Design of IntegratedCircuits and Systems (TCAD).</li>
-                        <li>[C6] Shiju Lin, Jinwei Liu, Martin D.F. Wong. “GAMER: GPU Accelerated Maze Routing.” In 2021IEEE/ACM International Conference On Computer Aided Design (ICCAD).</li>
-                        <li>[C5] Fangzhou Wang, Lixin LIU, Jingsong Chen, Jinwei Liu, Xinshi Zang and Martin D.F. Wong. “Starfish: An Efficient P&R Co-Optimization Engine with A*-based Partial Rerouting.” In 2021IEEE/ACM International Conference On Computer Aided Design (ICCAD).</li>
+                        <li>[C6] Shiju Lin, Jinwei Liu, Martin D.F. Wong. “GAMER: GPU Accelerated Maze Routing.” In 2021 IEEE/ACM International Conference On Computer Aided Design (ICCAD).</li>
+                        <li>[C5] Fangzhou Wang, Lixin LIU, Jingsong Chen, Jinwei Liu, Xinshi Zang and Martin D.F. Wong. “Starfish: An Efficient P&R Co-Optimization Engine with A*-based Partial Rerouting.” In 2021 IEEE/ACM International Conference On Computer Aided Design (ICCAD).</li>
                         <li>[C4] Jinwei Liu, Gengjie Chen, Evangeline F.Y. Young. “REST: Constructing Rectilinear Steiner Minimum Tree via Reinforcement Learning.” In 2021 58th ACM/IEEE Design Automation Conference(DAC).</li>
                         <li>[C3] Jiang Bentian, Jingsong Chen, Jinwei Liu, Lixin Liu, Fangzhou Wang, Xiaopeng Zhang, and Evangeline F.Y. Young. “CU. POKer: Placing DNNs on Wafer-Scale Al Accelerator with Optimal Kernel Sizing.” In 2020 IEEE/ACM International Conference On Computer Aided Design (ICCAD).</li>
                         <li>[C2] Jinwei Liu, Chak-Wa Pui, Fangzhou Wang, and Evangeline F.Y. Young. “CUGR: Detailed-routability-driven 3D global routing with probabilistic resource model.” In 2020 57th ACM/IEEE Design Automation Conference (DAC).</li>
