--- a/index.html
+++ b/index.html
@@ -3,13 +3,12 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="styles.css">
-        <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
         <link rel="shortcut icon" href="photo.png">
         <title>Jinwei Liu</title>
     </head>
     <body>
         <div class="page-container">
-            <div class="section" style="height:200px">
+            <div class="section" style="min-height:200px">
                 <img class="photo" src="photo.png" align="left">
                 <h1>Jinwei Liu</h1>
                 <p>
@@ -66,11 +65,11 @@
             for (i = 0; i < titles.length; i++) {
                 titles[i].addEventListener("click", function() {
                     var content = this.nextElementSibling;
-                    if (content.style.maxHeight) {
-                        content.style.maxHeight = null;
+                    if (content.style.display === "block") {
+                        content.style.display = null;
                         this.innerHTML = '+' + this.innerHTML.substring(1);
                     } else {
-                        content.style.maxHeight = content.scrollHeight + "px";
+                        content.style.display = "block";
                         this.innerHTML = '−' + this.innerHTML.substring(1);
                     }
                 });
