--- a/index.html
+++ b/index.html
@@ -57,22 +57,6 @@
                     </ul>
                 </div>
             </div>
-
-            <!-- Default Statcounter code for My Home Page http://anticold.github.io -->
-            <script type="text/javascript">
-            var sc_project=12591856;
-            var sc_invisible=0;
-            var sc_security="f453050f";
-            var scJsHost = "https://";
-            document.write("<sc"+"ript type='text/javascript' src='" + scJsHost+
-            "statcounter.com/counter/counter.js'></"+"script>");
-            </script>
-            <noscript><div class="statcounter"><a title="Web Analytics Made Easy -
-            StatCounter" href="https://statcounter.com/" target="_blank"><img
-            class="statcounter" src="https://c.statcounter.com/12591856/0/f453050f/0/"
-            alt="Web Analytics Made Easy - StatCounter"
-            referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
-            <!-- End of Statcounter Code -->
         </div>
 
         <script>
@@ -91,6 +75,7 @@
                 });
             }
         </script>
+
         <!-- Default Statcounter code for My Homepage
         http://anticold.github.io -->
         <script type="text/javascript">
@@ -101,11 +86,11 @@
         <script type="text/javascript"
         src="https://www.statcounter.com/counter/counter.js"
         async></script>
-        <noscript><div class="statcounter"><a title="Web Analytics"
-        href="https://statcounter.com/" target="_blank"><img
-        class="statcounter"
+        <noscript><div class="statcounter"><a title="Web Analytics
+        Made Easy - StatCounter" href="https://statcounter.com/"
+        target="_blank"><img class="statcounter"
         src="https://c.statcounter.com/12591939/0/27793b65/1/"
-        alt="Web Analytics"
+        alt="Web Analytics Made Easy - StatCounter"
         referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
         <!-- End of Statcounter Code -->
     </body>
