--- a/index.html
+++ b/index.html
@@ -19,28 +19,28 @@
 
                 </p>
             </div>
-
+            
             <div class="section">
                 <h2>About</h2>
                 <div>
                     <p class="about">
                         I am currently a fourth-year Ph.D. candidate at the <a href="http://www.cse.cuhk.edu.hk" target="_blank">Department of Computer Science and Engineering</a>,
                         <a href="http://www.cuhk.edu.hk/english/index.html" target="_blank">The Chinese University of Hong Kong</a>, under the supervision of
-                        <a href="https://www.cse.cuhk.edu.hk/~fyyoung/">Prof. Evangeline F.Y. Young</a> since Fall 2018.
-                        Previously, I received my bachelor's degree in Computer Science and Engineering from <a href="https://en.scu.edu.cn">Sichuan University</a>.
+                        <a href="https://www.cse.cuhk.edu.hk/~fyyoung/" target="_blank">Prof. Evangeline F.Y. Young</a> since Fall 2018.
+                        Previously, I received my bachelor's degree in Computer Science and Engineering from <a href="https://en.scu.edu.cn" target="_blank">Sichuan University</a>.
                         My current research interests include Placement and Routing (PnR), VLSI Physical Design, Combinatorial Optimization and Machine learning.
                     </p>
                 </div>
                 <h2 class="section-title">+ Publications</h2>
                 <div class="section-content">
                     <ul>
-                        <li>[J1] Bentian Jiang, Jingsong Chen, Jinwei Liu, Lixin Liu, Fangzhou Wang, Xiaopeng Zhang, and Evangeline F.Y. Young. “CU.POKer: Placing DNNs on WSE with Optimal Kernel Sizing and Efficient Protocol Optimization.” accepted by IEEE Transactions on Computer-Aided Design of IntegratedCircuits and Systems (TCAD).</li>
+                        <li>[J1] Bentian Jiang, Jingsong Chen, Jinwei Liu, Lixin Liu, Fangzhou Wang, Xiaopeng Zhang, and Evangeline F.Y. Young. <a href="https://ieeexplore.ieee.org/abstract/document/9480606" target="_blank">“CU.POKer: Placing DNNs on WSE with Optimal Kernel Sizing and Efficient Protocol Optimization.”</a> accepted by IEEE Transactions on Computer-Aided Design of IntegratedCircuits and Systems (TCAD).</li>
                         <li>[C6] Shiju Lin, Jinwei Liu, Martin D.F. Wong. “GAMER: GPU Accelerated Maze Routing.” In 2021 IEEE/ACM International Conference On Computer Aided Design (ICCAD).</li>
                         <li>[C5] Fangzhou Wang, Lixin LIU, Jingsong Chen, Jinwei Liu, Xinshi Zang and Martin D.F. Wong. “Starfish: An Efficient P&R Co-Optimization Engine with A*-based Partial Rerouting.” In 2021 IEEE/ACM International Conference On Computer Aided Design (ICCAD).</li>
                         <li>[C4] Jinwei Liu, Gengjie Chen, Evangeline F.Y. Young. “REST: Constructing Rectilinear Steiner Minimum Tree via Reinforcement Learning.” In 2021 58th ACM/IEEE Design Automation Conference(DAC).</li>
-                        <li>[C3] Jiang Bentian, Jingsong Chen, Jinwei Liu, Lixin Liu, Fangzhou Wang, Xiaopeng Zhang, and Evangeline F.Y. Young. “CU. POKer: Placing DNNs on Wafer-Scale Al Accelerator with Optimal Kernel Sizing.” In 2020 IEEE/ACM International Conference On Computer Aided Design (ICCAD).</li>
-                        <li>[C2] Jinwei Liu, Chak-Wa Pui, Fangzhou Wang, and Evangeline F.Y. Young. “CUGR: Detailed-routability-driven 3D global routing with probabilistic resource model.” In 2020 57th ACM/IEEE Design Automation Conference (DAC).</li>
-                        <li>[C1] Jingsong Chen, Jinwei Liu, Gengjie Chen, Dan Zheng and Evangeline F.Y. Young. “MARCH:MAze Routing Under a Concurrent and Hierarchical Scheme for Buses.” In Proceedings of the 56thAnnual Design Automation Conference 2019.</li>
+                        <li>[C3] Jiang Bentian, Jingsong Chen, Jinwei Liu, Lixin Liu, Fangzhou Wang, Xiaopeng Zhang, and Evangeline F.Y. Young. <a href="https://ieeexplore.ieee.org/document/9256473" target="_blank">“CU. POKer: Placing DNNs on Wafer-Scale Al Accelerator with Optimal Kernel Sizing.”</a> In 2020 IEEE/ACM International Conference On Computer Aided Design (ICCAD).</li>
+                        <li>[C2] Jinwei Liu, Chak-Wa Pui, Fangzhou Wang, and Evangeline F.Y. Young. <a href="https://ieeexplore.ieee.org/document/9218646" target="_blank">“CUGR: Detailed-Routability-Driven 3D Global Routing with Probabilistic Resource Model.”</a> In 2020 57th ACM/IEEE Design Automation Conference (DAC).</li>
+                        <li>[C1] Jingsong Chen, Jinwei Liu, Gengjie Chen, Dan Zheng and Evangeline F.Y. Young. <a href="https://dl.acm.org/doi/abs/10.1145/3316781.3317860" target="_blank">“MARCH: MAze Routing Under a Concurrent and Hierarchical Scheme for Buses.”</a> In Proceedings of the 56thAnnual Design Automation Conference 2019.</li>
                     </ul>
                 </div>
 
@@ -48,12 +48,12 @@
                 <div class="section-content">
                     <ul>
                         <li>Full Postgraduate Studentship of CUHK, 2018-Present</li>
-                        <li>HKSAR Government Scholarship Fund – Talent Development Scholarship, 2021</li>
-                        <li>Second Place at ISPD 2021 Contest on “Wafer Scale Physics Modeling”</li>
-                        <li>First Place at ICCAD 2020 Contest on “Routing with Cell Movement”</li>
-                        <li>First Place at ISPD 2020 Contest on “Wafer-Scale Deep Learning Accelerator Placement”</li>
-                        <li>First Place at ICCAD 2019 Contest on “LEF/DEF Based Open-Source Global Router”</li>
-                        <li>First Place at ICCAD 2018 Contest on “Obstacle-Aware On-Track Bus Routing”</li>
+                        <li>Talent Development Scholarship, HKSAR Government Scholarship Fund, 2021</li>
+                        <li>Second Place at ISPD 2021 Contest on <a href="https://ispd.cc/contests/21/index.html" target="_blank">“Wafer Scale Physics Modeling”</a></li>
+                        <li>First Place at ICCAD 2020 Contest on <a href="http://iccad-contest.org/2020/" target="_blank">“Routing with Cell Movement”</a></li>
+                        <li>First Place at ISPD 2020 Contest on <a href="https://ispd.cc/contests/20/index.html" target="_blank">“Wafer-Scale Deep Learning Accelerator Placement”</a></li>
+                        <li>First Place at ICCAD 2019 Contest on <a href="http://iccad-contest.org/2019/" target="_blank">“LEF/DEF Based Open-Source Global Router”</a></li>
+                        <li>First Place at ICCAD 2018 Contest on <a href="http://iccad-contest.org/2018/" target="_blank">“Obstacle-Aware On-Track Bus Routing”</a></li>
                     </ul>
                 </div>
             </div>
