--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
                 </p>
             </div>
-            
+
             <div class="section">
                 <h2>About</h2>
                 <div>
@@ -36,11 +36,11 @@
                     <ul>
                         <li>[J1] Bentian Jiang, Jingsong Chen, Jinwei Liu, Lixin Liu, Fangzhou Wang, Xiaopeng Zhang, and Evangeline F.Y. Young. <a href="https://ieeexplore.ieee.org/abstract/document/9480606" target="_blank">“CU.POKer: Placing DNNs on WSE with Optimal Kernel Sizing and Efficient Protocol Optimization.”</a> accepted by IEEE Transactions on Computer-Aided Design of IntegratedCircuits and Systems (TCAD).</li>
                         <li>[C6] Shiju Lin, Jinwei Liu, Martin D.F. Wong. “GAMER: GPU Accelerated Maze Routing.” In 2021 IEEE/ACM International Conference On Computer Aided Design (ICCAD).</li>
-                        <li>[C5] Fangzhou Wang, Lixin LIU, Jingsong Chen, Jinwei Liu, Xinshi Zang and Martin D.F. Wong. “Starfish: An Efficient P&R Co-Optimization Engine with A*-based Partial Rerouting.” In 2021 IEEE/ACM International Conference On Computer Aided Design (ICCAD).</li>
-                        <li>[C4] Jinwei Liu, Gengjie Chen, Evangeline F.Y. Young. “REST: Constructing Rectilinear Steiner Minimum Tree via Reinforcement Learning.” In 2021 58th ACM/IEEE Design Automation Conference(DAC).</li>
+                        <li>[C5] Fangzhou Wang, Lixin Liu, Jingsong Chen, Jinwei Liu, Xinshi Zang and Martin D.F. Wong. “Starfish: An Efficient P&R Co-Optimization Engine with A*-based Partial Rerouting.” In 2021 IEEE/ACM International Conference On Computer Aided Design (ICCAD).</li>
+                        <li>[C4] Jinwei Liu, Gengjie Chen, Evangeline F.Y. Young. “REST: Constructing Rectilinear Steiner Minimum Tree via Reinforcement Learning.” In 2021 58th ACM/IEEE Design Automation Conference (DAC).</li>
                         <li>[C3] Jiang Bentian, Jingsong Chen, Jinwei Liu, Lixin Liu, Fangzhou Wang, Xiaopeng Zhang, and Evangeline F.Y. Young. <a href="https://ieeexplore.ieee.org/document/9256473" target="_blank">“CU. POKer: Placing DNNs on Wafer-Scale Al Accelerator with Optimal Kernel Sizing.”</a> In 2020 IEEE/ACM International Conference On Computer Aided Design (ICCAD).</li>
                         <li>[C2] Jinwei Liu, Chak-Wa Pui, Fangzhou Wang, and Evangeline F.Y. Young. <a href="https://ieeexplore.ieee.org/document/9218646" target="_blank">“CUGR: Detailed-Routability-Driven 3D Global Routing with Probabilistic Resource Model.”</a> In 2020 57th ACM/IEEE Design Automation Conference (DAC).</li>
-                        <li>[C1] Jingsong Chen, Jinwei Liu, Gengjie Chen, Dan Zheng and Evangeline F.Y. Young. <a href="https://dl.acm.org/doi/abs/10.1145/3316781.3317860" target="_blank">“MARCH: MAze Routing Under a Concurrent and Hierarchical Scheme for Buses.”</a> In Proceedings of the 56thAnnual Design Automation Conference 2019.</li>
+                        <li>[C1] Jingsong Chen, Jinwei Liu, Gengjie Chen, Dan Zheng and Evangeline F.Y. Young. <a href="https://dl.acm.org/doi/abs/10.1145/3316781.3317860" target="_blank">“MARCH: MAze Routing Under a Concurrent and Hierarchical Scheme for Buses.”</a> In Proceedings of the 56th Annual Design Automation Conference 2019.</li>
                     </ul>
                 </div>
 
