Add external links

--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@
                 </div>
             </div>
         </div>
+        <!-- link exchange to improve page ranks of search engines -->
+        <a href="https://wfz0755.github.io/CV/" style="display:none">WFZ</a>
 
         <script>
             var titles = document.getElementsByClassName("section-title");
