Update photo and awards

--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="styles.css">
-        <link rel="shortcut icon" href="photo.png">
-        <title>Jinwei Liu</title>
+        <link rel="shortcut icon" href="icon.png">
+	<title>Jinwei Liu @ CUHK</title>
     </head>
     <body>
         <div class="page-container">
             <div class="section" style="min-height:200px">
-                <img class="photo" src="photo.png" align="left">
+                <img class="photo" src="photo.jpg" align="left">
                 <h1>Jinwei Liu</h1>
                 <p>
                     Ph.D. Candidate<br>
@@ -47,6 +47,9 @@
                 <h2 class="section-title">+ Honors & Awards</h2>
                 <div class="section-content">
                     <ul>
+			<li>First Place at ICCAD 2021 Contest on <a href="http://iccad-contest.org/2021/" target="_blank">GPU-Accelerated Logic Rewriting</a></li>
+			<li>Second Place at ICCAD 2021 Contest on <a href="http://iccad-contest.org/2021/" target="_blank">Routing with Cell Movement Advanced</a></li>
+			<li>Second Place at ICCAD 2021 CADathlon</li>
                         <li>Full Postgraduate Studentship of CUHK, 2018-Present</li>
                         <li>Talent Development Scholarship, HKSAR Government Scholarship Fund, 2021</li>
                         <li>Second Place at ISPD 2021 Contest on <a href="https://ispd.cc/contests/21/index.html" target="_blank">“Wafer Scale Physics Modeling”</a></li>
