Update award table

--- a/index.html
+++ b/index.html
@@ -45,19 +45,19 @@
                 </div>
 
                 <h2 class="section-title">+ Honors & Awards</h2>
-                <div class="section-content">
-                    <ul>
-			<li>First Place at ICCAD 2021 Contest on <a href="http://iccad-contest.org/2021/" target="_blank">GPU-Accelerated Logic Rewriting</a></li>
-			<li>Second Place at ICCAD 2021 Contest on <a href="http://iccad-contest.org/2021/" target="_blank">Routing with Cell Movement Advanced</a></li>
-			<li>Second Place at ICCAD 2021 CADathlon</li>
-                        <li>Full Postgraduate Studentship of CUHK, 2018-Present</li>
-                        <li>Talent Development Scholarship, HKSAR Government Scholarship Fund, 2021</li>
-                        <li>Second Place at ISPD 2021 Contest on <a href="https://ispd.cc/contests/21/index.html" target="_blank">“Wafer Scale Physics Modeling”</a></li>
-                        <li>First Place at ICCAD 2020 Contest on <a href="http://iccad-contest.org/2020/" target="_blank">“Routing with Cell Movement”</a></li>
-                        <li>First Place at ISPD 2020 Contest on <a href="https://ispd.cc/contests/20/index.html" target="_blank">“Wafer-Scale Deep Learning Accelerator Placement”</a></li>
-                        <li>First Place at ICCAD 2019 Contest on <a href="http://iccad-contest.org/2019/" target="_blank">“LEF/DEF Based Open-Source Global Router”</a></li>
-                        <li>First Place at ICCAD 2018 Contest on <a href="http://iccad-contest.org/2018/" target="_blank">“Obstacle-Aware On-Track Bus Routing”</a></li>
-                    </ul>
+                <div class="section-content" style="margin-left:40px">
+                    <table class="award-table">
+                        <tr><td>First Place at ICCAD Contest on <a href="http://iccad-contest.org/2021/" target="_blank">GPU-Accelerated Logic Rewriting</a></td><td>2021</td></tr>
+                        <tr><td>Second Place at ICCAD Contest on <a href="http://iccad-contest.org/2021/" target="_blank">Routing with Cell Movement Advanced</a></td><td>2021</td></tr>
+                        <tr><td>Second Place at ICCAD CADathlon</td><td>2021</td></tr>
+                        <tr><td>Full Postgraduate Studentship of CUHK</td><td>2018</td></tr>
+                        <tr><td>Talent Development Scholarship, HKSAR Government Scholarship Fund</td><td>2021, 2022</td></tr>
+                        <tr><td>Second Place at ISPD Contest on <a href="https://ispd.cc/contests/21/index.html" target="_blank">“Wafer Scale Physics Modeling”</a></td><td>2021</td></tr>
+                        <tr><td>First Place at ICCAD Contest on <a href="http://iccad-contest.org/2020/" target="_blank">“Routing with Cell Movement”</a></td><td>2020</td></tr>
+                        <tr><td>First Place at ISPD Contest on <a href="https://ispd.cc/contests/20/index.html" target="_blank">“Wafer-Scale Deep Learning Accelerator Placement”</a></td><td>2020</td></tr>
+                        <tr><td>First Place at ICCAD Contest on <a href="http://iccad-contest.org/2019/" target="_blank">“LEF/DEF Based Open-Source Global Router”</a></td><td>2019</td></tr>
+                        <tr><td>First Place at ICCAD Contest on <a href="http://iccad-contest.org/2018/" target="_blank">“Obstacle-Aware On-Track Bus Routing”</a></td><td>2018</td></tr>
+                    </table>
                 </div>
             </div>
         </div>
