--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                 <img class="photo" src="photo.jpg" align="left">
                 <h1>Jinwei Liu</h1>
                 <p>
-                    Ph.D. Candidate<br>
+                    Ph.D.<br>
                     Email: jwliu[at]cse.cuhk.edu.hk<br>
                     <a href="http://www.cse.cuhk.edu.hk" target="_blank">Department of Computer Science and Engineering</a><br>
                     <a href="http://www.cuhk.edu.hk/english/index.html" target="_blank">The Chinese University of Hong Kong</a><br>
@@ -24,9 +24,9 @@
                 <h2>About</h2>
                 <div>
                     <p class="about">
-                        I am currently a fourth-year Ph.D. candidate at the <a href="http://www.cse.cuhk.edu.hk" target="_blank">Department of Computer Science and Engineering</a>,
+                        I received my Ph.D. at the <a href="http://www.cse.cuhk.edu.hk" target="_blank">Department of Computer Science and Engineering</a>,
                         <a href="http://www.cuhk.edu.hk/english/index.html" target="_blank">The Chinese University of Hong Kong</a>, under the supervision of
-                        <a href="https://www.cse.cuhk.edu.hk/~fyyoung/" target="_blank">Prof. Evangeline F.Y. Young</a> since Fall 2018.
+                        <a href="https://www.cse.cuhk.edu.hk/~fyyoung/" target="_blank">Prof. Evangeline F.Y. Young</a>, in 2022.
                         Previously, I received my bachelor's degree in Computer Science and Engineering from <a href="https://en.scu.edu.cn" target="_blank">Sichuan University</a>.
                         My current research interests include Placement and Routing (PnR), VLSI Physical Design, Combinatorial Optimization and Machine learning.
                     </p>
@@ -34,13 +34,17 @@
                 <h2 class="section-title">+ Publications</h2>
                 <div class="section-content">
                     <ul>
-                        <li>[J1] Bentian Jiang, Jingsong Chen, Jinwei Liu, Lixin Liu, Fangzhou Wang, Xiaopeng Zhang, and Evangeline F.Y. Young. <a href="https://ieeexplore.ieee.org/abstract/document/9480606" target="_blank">“CU.POKer: Placing DNNs on WSE with Optimal Kernel Sizing and Efficient Protocol Optimization.”</a> accepted by IEEE Transactions on Computer-Aided Design of IntegratedCircuits and Systems (TCAD).</li>
-                        <li>[C6] Shiju Lin, Jinwei Liu, Martin D.F. Wong. “GAMER: GPU Accelerated Maze Routing.” In 2021 IEEE/ACM International Conference On Computer Aided Design (ICCAD).</li>
-                        <li>[C5] Fangzhou Wang, Lixin Liu, Jingsong Chen, Jinwei Liu, Xinshi Zang and Martin D.F. Wong. “Starfish: An Efficient P&R Co-Optimization Engine with A*-based Partial Rerouting.” In 2021 IEEE/ACM International Conference On Computer Aided Design (ICCAD).</li>
-                        <li>[C4] Jinwei Liu, Gengjie Chen, Evangeline F.Y. Young. “REST: Constructing Rectilinear Steiner Minimum Tree via Reinforcement Learning.” In 2021 58th ACM/IEEE Design Automation Conference (DAC).</li>
-                        <li>[C3] Jiang Bentian, Jingsong Chen, Jinwei Liu, Lixin Liu, Fangzhou Wang, Xiaopeng Zhang, and Evangeline F.Y. Young. <a href="https://ieeexplore.ieee.org/document/9256473" target="_blank">“CU. POKer: Placing DNNs on Wafer-Scale Al Accelerator with Optimal Kernel Sizing.”</a> In 2020 IEEE/ACM International Conference On Computer Aided Design (ICCAD).</li>
-                        <li>[C2] Jinwei Liu, Chak-Wa Pui, Fangzhou Wang, and Evangeline F.Y. Young. <a href="https://ieeexplore.ieee.org/document/9218646" target="_blank">“CUGR: Detailed-Routability-Driven 3D Global Routing with Probabilistic Resource Model.”</a> In 2020 57th ACM/IEEE Design Automation Conference (DAC).</li>
-                        <li>[C1] Jingsong Chen, Jinwei Liu, Gengjie Chen, Dan Zheng and Evangeline F.Y. Young. <a href="https://dl.acm.org/doi/abs/10.1145/3316781.3317860" target="_blank">“MARCH: MAze Routing Under a Concurrent and Hierarchical Scheme for Buses.”</a> In Proceedings of the 56th Annual Design Automation Conference 2019.</li>
+                        <li>[J2] Shiju Lin, <span class="me">Jinwei Liu</span>, Evangeline F.Y. Young, Martin D.F. Wong <a href="https://ieeexplore.ieee.org/abstract/document/9799536" target="_blank">"Gamer: Gpu accelerated maze routing."</a> IEEE Transactions on Computer-Aided Design of Integrated Circuits and Systems (2022).</li>
+                        <li>[J1] Bentian Jiang, Jingsong Chen, <span class="me">Jinwei Liu</span>, Lixin Liu, Fangzhou Wang, Xiaopeng Zhang, and Evangeline F.Y. Young. <a href="https://ieeexplore.ieee.org/abstract/document/9480606" target="_blank">“CU.POKer: Placing DNNs on WSE with Optimal Kernel Sizing and Efficient Protocol Optimization.”</a> IEEE Transactions on Computer-Aided Design of Integrated Circuits and Systems (2021).</li>
+                        <li>[C9] <span class="me">Jinwei Liu</span>, Xiaopeng Zhang, Shiju Lin, Xinshi Zang, Jingsong Chen, Bentian Jiang, Martin D.F. Wong, Evangeline F.Y. Young <a href="https://dl.acm.org/doi/abs/10.1145/3489517.3530565" target="_blank">"Partition and place finite element model on wafer-scale engine."</a> In 2022 59th ACM/IEEE Design Automation Conference (DAC).</li>
+                        <li>[C8] Shiju Lin, <span class="me">Jinwei Liu</span>, Tianji Liu, Martin D.F. Wong, Evangeline F.Y. Young <a href="https://dl.acm.org/doi/abs/10.1145/3489517.3530462" target="_blank">"NovelRewrite: node-level parallel AIG rewriting."</a> In 2022 59th ACM/IEEE Design Automation Conference (DAC).</li>
+                        <li>[C7] Xinshi Zang, Fangzhou Wang, <span class="me">Jinwei Liu</span>, Martin D.F. Wong, <a href="https://dl.acm.org/doi/10.1145/3508352.3549470" target="_blank">"ATLAS: A Two-Level Layer-Aware Scheme for Routing with Cell Movement"</a> In 2022 IEEE/ACM International Conference On Computer Aided Design (ICCAD). </li>
+                        <li>[C6] Shiju Lin, <span class="me">Jinwei Liu</span>, Martin D.F. Wong. <a href="https://ieeexplore.ieee.org/abstract/document/9799536" target="_blank">“GAMER: GPU Accelerated Maze Routing.”</a> In 2021 IEEE/ACM International Conference On Computer Aided Design (ICCAD).</li>
+                        <li>[C5] Fangzhou Wang, Lixin Liu, Jingsong Chen, <span class="me">Jinwei Liu</span>, Xinshi Zang and Martin D.F. Wong. <a href="https://ieeexplore.ieee.org/abstract/document/9643517/" target="_blank">“Starfish: An Efficient P&R Co-Optimization Engine with A*-based Partial Rerouting.”</a> In 2021 IEEE/ACM International Conference On Computer Aided Design (ICCAD).</li>
+                        <li>[C4] <span class="me">Jinwei Liu</span>, Gengjie Chen, Evangeline F.Y. Young. <a href="https://ieeexplore.ieee.org/abstract/document/9586209/" target="_blank">Constructing Rectilinear Steiner Minimum Tree via Reinforcement Learning.”</a> In 2021 58th ACM/IEEE Design Automation Conference (DAC).</li>
+                        <li>[C3] Jiang Bentian, Jingsong Chen, <span class="me">Jinwei Liu</span>, Lixin Liu, Fangzhou Wang, Xiaopeng Zhang, and Evangeline F.Y. Young. <a href="https://ieeexplore.ieee.org/document/9256473" target="_blank">“CU. POKer: Placing DNNs on Wafer-Scale Al Accelerator with Optimal Kernel Sizing.”</a> In 2020 IEEE/ACM International Conference On Computer Aided Design (ICCAD).</li>
+                        <li>[C2] <span class="me">Jinwei Liu</span>, Chak-Wa Pui, Fangzhou Wang, and Evangeline F.Y. Young. <a href="https://ieeexplore.ieee.org/document/9218646" target="_blank">“CUGR: Detailed-Routability-Driven 3D Global Routing with Probabilistic Resource Model.”</a> In 2020 57th ACM/IEEE Design Automation Conference (DAC).</li>
+                        <li>[C1] Jingsong Chen, <span class="me">Jinwei Liu</span>, Gengjie Chen, Dan Zheng and Evangeline F.Y. Young. <a href="https://dl.acm.org/doi/abs/10.1145/3316781.3317860" target="_blank">“MARCH: MAze Routing Under a Concurrent and Hierarchical Scheme for Buses.”</a> In Proceedings of the 56th Annual Design Automation Conference 2019.</li>
                     </ul>
                 </div>
 
@@ -63,6 +67,9 @@
         </div>
         <!-- link exchange to improve page ranks of search engines -->
         <a href="https://wfz0755.github.io/CV/" style="display:none">WFZ</a>
+        <a href="https://appsrv.cse.cuhk.edu.hk/~sjlin/" style="display:none">04G</a>
+        <a href="https://shijulin.github.io/" style="display:none">04G/2</a>
+        
 
         <script>
             var titles = document.getElementsByClassName("section-title");
