--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
                     Email: jwliu[at]cse.cuhk.edu.hk<br>
                     <a href="http://www.cse.cuhk.edu.hk" target="_blank">Department of Computer Science and Engineering</a><br>
                     <a href="http://www.cuhk.edu.hk/english/index.html" target="_blank">The Chinese University of Hong Kong</a><br>
-
+                    <a href="https://scholar.google.com/citations?user=tu0mhigAAAAJ&hl=en"><img class="link-icon" src="google_scholoar_logo.png"></a>
+                    <a href="https://github.com/anticold"><img class="link-icon" src="github_logo.png"></a>
                 </p>
             </div>
 
@@ -49,18 +50,18 @@
                 </div>
 
                 <h2 class="section-title">+ Honors & Awards</h2>
-                <div class="section-content" style="margin-left:40px">
+                <div class="section-content">
                     <table class="award-table">
-                        <tr><td>First Place at ICCAD Contest on <a href="http://iccad-contest.org/2021/" target="_blank">GPU-Accelerated Logic Rewriting</a></td><td>2021</td></tr>
-                        <tr><td>Second Place at ICCAD Contest on <a href="http://iccad-contest.org/2021/" target="_blank">Routing with Cell Movement Advanced</a></td><td>2021</td></tr>
-                        <tr><td>Second Place at ICCAD CADathlon</td><td>2021</td></tr>
-                        <tr><td>Full Postgraduate Studentship of CUHK</td><td>2018</td></tr>
-                        <tr><td>Talent Development Scholarship, HKSAR Government Scholarship Fund</td><td>2021, 2022</td></tr>
-                        <tr><td>Second Place at ISPD Contest on <a href="https://ispd.cc/contests/21/index.html" target="_blank">“Wafer Scale Physics Modeling”</a></td><td>2021</td></tr>
-                        <tr><td>First Place at ICCAD Contest on <a href="http://iccad-contest.org/2020/" target="_blank">“Routing with Cell Movement”</a></td><td>2020</td></tr>
-                        <tr><td>First Place at ISPD Contest on <a href="https://ispd.cc/contests/20/index.html" target="_blank">“Wafer-Scale Deep Learning Accelerator Placement”</a></td><td>2020</td></tr>
-                        <tr><td>First Place at ICCAD Contest on <a href="http://iccad-contest.org/2019/" target="_blank">“LEF/DEF Based Open-Source Global Router”</a></td><td>2019</td></tr>
-                        <tr><td>First Place at ICCAD Contest on <a href="http://iccad-contest.org/2018/" target="_blank">“Obstacle-Aware On-Track Bus Routing”</a></td><td>2018</td></tr>
+                        <tr><td><ul><li>First Place at ICCAD Contest on <a href="http://iccad-contest.org/2021/" target="_blank">GPU-Accelerated Logic Rewriting</a></li></ul></td><td>2021</td></tr>
+                        <tr><td><ul><li>Second Place at ICCAD Contest on <a href="http://iccad-contest.org/2021/" target="_blank">Routing with Cell Movement Advanced</a></li></ul></td><td>2021</td></tr>
+                        <tr><td><ul><li>Second Place at ICCAD CADathlon</li></ul></td><td>2021</td></tr>
+                        <tr><td><ul><li>Full Postgraduate Studentship of CUHK</li></ul></td><td>2018</td></tr>
+                        <tr><td><ul><li>Talent Development Scholarship, HKSAR Government Scholarship Fund</li></ul></td><td>2021, 2022</td></tr>
+                        <tr><td><ul><li>Second Place at ISPD Contest on <a href="https://ispd.cc/contests/21/index.html" target="_blank">“Wafer Scale Physics Modeling”</a></li></ul></td><td>2021</td></tr>
+                        <tr><td><ul><li>First Place at ICCAD Contest on <a href="http://iccad-contest.org/2020/" target="_blank">“Routing with Cell Movement”</a></li></ul></td><td>2020</td></tr>
+                        <tr><td><ul><li>First Place at ISPD Contest on <a href="https://ispd.cc/contests/20/index.html" target="_blank">“Wafer-Scale Deep Learning Accelerator Placement”</a></li></ul></td><td>2020</td></tr>
+                        <tr><td><ul><li>First Place at ICCAD Contest on <a href="http://iccad-contest.org/2019/" target="_blank">“LEF/DEF Based Open-Source Global Router”</a></li></ul></td><td>2019</td></tr>
+                        <tr><td><ul><li>First Place at ICCAD Contest on <a href="http://iccad-contest.org/2018/" target="_blank">“Obstacle-Aware On-Track Bus Routing”</a></li></ul></td><td>2018</td></tr>
                     </table>
                 </div>
             </div>
