--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@
                 <h2 class="section-title">+ Honors & Awards</h2>
                 <div class="section-content">
                     <table class="award-table">
-                        <tr><td><ul><li>Best Teaching Assistant Award, CSE Department, CUHK</li></ul></td><td>2023</td></tr>
+                        <tr><td><ul><li>Best Teaching Assistant Award, CSE Department, CUHK</li></ul></td><td>2022</td></tr>
+                        <tr><td><ul><li>Full Postgraduate Studentship of CUHK</li></ul></td><td>2018-2022</td></tr>
+                        <tr><td><ul><li>Talent Development Scholarship, HKSAR Government Scholarship Fund</li></ul></td><td>2021, 2022</td></tr>
                         <tr><td><ul><li>First Place at ICCAD Contest on <a href="http://iccad-contest.org/2021/" target="_blank">GPU-Accelerated Logic Rewriting</a></li></ul></td><td>2021</td></tr>
                         <tr><td><ul><li>Second Place at ICCAD Contest on <a href="http://iccad-contest.org/2021/" target="_blank">Routing with Cell Movement Advanced</a></li></ul></td><td>2021</td></tr>
                         <tr><td><ul><li>Second Place at ICCAD CADathlon</li></ul></td><td>2021</td></tr>
-                        <tr><td><ul><li>Full Postgraduate Studentship of CUHK</li></ul></td><td>2018</td></tr>
-                        <tr><td><ul><li>Talent Development Scholarship, HKSAR Government Scholarship Fund</li></ul></td><td>2021, 2022</td></tr>
                         <tr><td><ul><li>Second Place at ISPD Contest on <a href="https://ispd.cc/contests/21/index.html" target="_blank">“Wafer Scale Physics Modeling”</a></li></ul></td><td>2021</td></tr>
                         <tr><td><ul><li>First Place at ICCAD Contest on <a href="http://iccad-contest.org/2020/" target="_blank">“Routing with Cell Movement”</a></li></ul></td><td>2020</td></tr>
                         <tr><td><ul><li>First Place at ISPD Contest on <a href="https://ispd.cc/contests/20/index.html" target="_blank">“Wafer-Scale Deep Learning Accelerator Placement”</a></li></ul></td><td>2020</td></tr>
