--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         <li>[J2] Shiju Lin, <span class="me">Jinwei Liu</span>, Evangeline F.Y. Young, Martin D.F. Wong <a href="https://ieeexplore.ieee.org/abstract/document/9799536" target="_blank">"GAMER: Gpu accelerated maze routing."</a> IEEE Transactions on Computer-Aided Design of Integrated Circuits and Systems (2022).</li>
                         <li>[J1] Bentian Jiang, Jingsong Chen, <span class="me">Jinwei Liu</span>, Lixin Liu, Fangzhou Wang, Xiaopeng Zhang, and Evangeline F.Y. Young. <a href="https://ieeexplore.ieee.org/abstract/document/9480606" target="_blank">“CU.POKer: Placing DNNs on WSE with Optimal Kernel Sizing and Efficient Protocol Optimization.”</a> IEEE Transactions on Computer-Aided Design of Integrated Circuits and Systems (2021).</li>
                         <li>[C11] <span class="me">Jinwei Liu</span>, Evangeline F.Y. Young "EDGE: Efficient DAG-based Global Routing Engine" In 2023 60th ACM/IEEE Design Automation Conference (DAC).</li>
-                        <li>[C10] Fangzhou Wang, <span class="me">Jinwei Liu</span>, Evangeline F.Y. Young "FastPass: Fast Pin Access Analysis with Incremental SAT Solving." In 2023 ACM International Symposium on Physical Design (ISPD).</li>
+                        <li>[C10] Fangzhou Wang, <span class="me">Jinwei Liu</span>, Evangeline F.Y. Young "FastPass: Fast Pin Access Analysis with Incremental SAT Solving." In 2023 ACM International Symposium on Physical Design (ISPD). (<i><b>Best Paper Award</b></i>).</li>
                         <li>[C9] <span class="me">Jinwei Liu</span>, Xiaopeng Zhang, Shiju Lin, Xinshi Zang, Jingsong Chen, Bentian Jiang, Martin D.F. Wong, Evangeline F.Y. Young <a href="https://dl.acm.org/doi/abs/10.1145/3489517.3530565" target="_blank">"Partition and place finite element model on wafer-scale engine."</a> In 2022 59th ACM/IEEE Design Automation Conference (DAC).</li>
                         <li>[C8] Shiju Lin, <span class="me">Jinwei Liu</span>, Tianji Liu, Martin D.F. Wong, Evangeline F.Y. Young <a href="https://dl.acm.org/doi/abs/10.1145/3489517.3530462" target="_blank">"NovelRewrite: node-level parallel AIG rewriting."</a> In 2022 59th ACM/IEEE Design Automation Conference (DAC).</li>
                         <li>[C7] Xinshi Zang, Fangzhou Wang, <span class="me">Jinwei Liu</span>, Martin D.F. Wong, <a href="https://dl.acm.org/doi/10.1145/3508352.3549470" target="_blank">"ATLAS: A Two-Level Layer-Aware Scheme for Routing with Cell Movement"</a> In 2022 IEEE/ACM International Conference On Computer Aided Design (ICCAD). </li>
@@ -79,6 +79,7 @@
         <script>
             // generate lists
             var awards = [
+                "ISPD Best Paper Award",
                 "Best Teaching Assistant Award, CSE Department, CUHK",
                 "Full Postgraduate Studentship of CUHK",
                 "Talent Development Scholarship, HKSAR Government Scholarship Fund",
@@ -93,6 +94,7 @@
             ];
 
             var years = [
+                "2023",
                 "2022",
                 "2018-2022",
                 "2021, 2022",
