--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
         <a href="https://wfz0755.github.io/CV/" style="display:none">WFZ</a>
         <a href="https://appsrv.cse.cuhk.edu.hk/~sjlin/" style="display:none">04G</a>
         <a href="https://shijulin.github.io/" style="display:none">04G/2</a>
+        <a href="docs/thesis.pdf" style="display:none">WFZ</a>
         
 
         <script>
