--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <link rel="stylesheet" href="styles.css">
         <link rel="shortcut icon" href="icon.png">
-	<title>Jinwei Liu @ CUHK</title>
+	<title>Jinwei Liu @ HKBU</title>
     </head>
     <body>
         <div class="page-container">
@@ -12,10 +12,10 @@
                 <img class="photo" src="photo.jpg" align="left">
                 <h1>Jinwei Liu</h1>
                 <p>
-                    Ph.D.<br>
-                    Email: jwliu[at]cse.cuhk.edu.hk<br>
-                    <a href="http://www.cse.cuhk.edu.hk" target="_blank">Department of Computer Science and Engineering</a><br>
-                    <a href="http://www.cuhk.edu.hk/english/index.html" target="_blank">The Chinese University of Hong Kong</a><br>
+                    Assistant Professor<br>
+                    Email: jinweiliu[at]comp.hkbu.edu.hk<br>
+                    <a href="https://www.comp.hkbu.edu.hk/v1/" target="_blank">Department of Computer Science</a><br>
+                    <a href="https://www.hkbu.edu.hk" target="_blank">Hong Kong Baptist University</a><br>
                     <a href="https://scholar.google.com/citations?user=tu0mhigAAAAJ&hl=en"><img class="link-icon" src="google_scholoar_logo.png"></a>
                     <a href="https://github.com/anticold"><img class="link-icon" src="github_logo.png"></a>
                 </p>
@@ -25,11 +25,12 @@
                 <h2>About</h2>
                 <div>
                     <p class="about">
+                        I am an Assistant Professor with the Computer Science Department of Hong Kong Baptist University.
                         I received my Ph.D. at the <a href="http://www.cse.cuhk.edu.hk" target="_blank">Department of Computer Science and Engineering</a>,
                         <a href="http://www.cuhk.edu.hk/english/index.html" target="_blank">The Chinese University of Hong Kong</a>, under the supervision of
                         <a href="https://www.cse.cuhk.edu.hk/~fyyoung/" target="_blank">Prof. Evangeline F.Y. Young</a>, in 2022.
                         Previously, I received my bachelor's degree in Computer Science and Engineering from <a href="https://en.scu.edu.cn" target="_blank">Sichuan University</a>.
-                        My current research interests include Placement and Routing (PnR), VLSI Physical Design, Combinatorial Optimization and Machine learning.
+                        My current research interests include Electronic Design Automation, Combinatorial Optimization, Machine Learning, and Reinforcement Learning.
                     </p>
                 </div>
                 <h2 class="section-title">+ Publications</h2>
